--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "custom-react-scripts": "^0.2.2",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
@@ -14,7 +15,8 @@
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
