--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^4.3.0",
     "custom-react-scripts": "^0.2.2",
     "history": "^4.7.2",
